--- a/css/survey.css
+++ b/css/survey.css
@@ -1,52 +1,57 @@
 html{
+    min-height: 100%;
     font-family: 'Coda', cursive;
-    
+    background-image: url(../img/female-coding.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 h1{
     font-family: 'Audiowide', cursive;
     color: white;
     font-size: 40px;
+    font-style: oblique;
 }
-h2{
+H2{
     font-family: 'Oswald', sans-serif;
-    font-size: medium;
+    font-size: large;
+    font-style: italic;
 }
 p{
     font-family: 'Bangers', cursive;
     font-size: medium;
 }
+label{
+    font-family: 'Bangers', cursive;
+    font-size: medium;
+}
 
-
-body::before{
-    content:'';
-    top: 0;
-    left: 0;
+body{
     height: 100%;
     width: 100%;
-    position: fixed;
     display: flex;
-    background-image: url(../img/female-coding.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.5;
+}
+
+input,select{
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 3px;
+    padding: 2px;
 }
 
 #container-main{
     display: flex;
     flex-direction:column;
-    scroll-padding: auto;
-    height: auto;
     margin: 4rem auto 0 auto;
-    background-color: seagreen;
+    background-color: rgb(0, 87, 38);
     border: 4px solid rgb(0, 0, 0);
     border-radius: 6px;
     padding: 10px;
+    overflow-x: hidden;
+    overflow-y: auto; 
+    opacity: 0.85;
 }
 #container-header{
     display: flex;
     align-items: center;
-    text-align: center;
 }
 #survey-form{
     display: flex;
@@ -74,6 +79,7 @@ body::before{
         max-width: 700px;
     }
 }
+
 @media (min-width: 500px){
     form{
         padding: 2.75rem;
